# ferrix

./: Cargo.toml  LICENSE  flake.nix
src/: main.rs
