[package]
name = "ferrix"
version = "0.1.0"
edition = "2021"


[package.metadata.nix]
build = true
app = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix-nar = { version = "0.1.0" }
tokio = { version = "1.18.0" }
tokio-console = { version = "0.1.5" }
tokio-context = { version = "0.1.3" }
tokio-metrics = { version = "0.1.0" }
futures = { version = "0.3.21" }
tracing-futures = { version = "0.2.5" }
tracing = { version = "0.1.34" }
tracing-serde = { version = "0.1.3" }
tracing-subscriber = { version = "0.3.11" }
snafu = { version = "0.7.0" }
